--- a/requirements.in
+++ b/requirements.in
@@ -4,3 +4,4 @@ djangorestframework
 django-helusers
 social-auth-app-django
 psycopg2
+-e git+https://github.com/neutronX/django-markdownx.git#egg=django-markdownx
