--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,12 @@ django-markdownx==2.0.27
 django-mptt==0.9.1
 django-ordered-model==3.1.1
 django==2.1.3
+djangorestframework-jsonapi==2.6.0
 djangorestframework==3.9.0
 drf-oidc-auth==0.9
 future==0.17.1            # via pyjwkest
 idna==2.7                 # via requests
+inflection==0.3.1         # via djangorestframework-jsonapi
 markdown==3.0.1
 oauthlib==2.1.0           # via requests-oauthlib, social-auth-core
 pillow==5.3.0             # via django-markdownx
@@ -32,7 +34,7 @@ python3-openid==3.1.0     # via social-auth-core
 pytz==2018.7              # via django
 requests-oauthlib==1.0.0  # via social-auth-core
 requests==2.20.1          # via pyjwkest, requests-oauthlib, social-auth-core
-six==1.11.0               # via django-extensions, pyjwkest, social-auth-app-django, social-auth-core
+six==1.11.0               # via django-extensions, djangorestframework-jsonapi, pyjwkest, social-auth-app-django, social-auth-core
 social-auth-app-django==3.1.0
 social-auth-core==2.0.0   # via social-auth-app-django
 swapper==1.1.0
