--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@
 certifi==2018.10.15       # via requests
 chardet==3.0.3            # via requests
 defusedxml==0.5.0         # via python3-openid, social-auth-core
+django-cors-headers==2.4.0
 django-environ==0.4.5
 django-extensions==2.1.3
 django-filter==2.0.0
@@ -23,6 +24,7 @@ drf-oidc-auth==0.9
 future==0.17.1            # via pyjwkest
 idna==2.7                 # via requests
 inflection==0.3.1         # via djangorestframework-jsonapi
+lxml==4.2.5
 markdown==3.0.1
 oauthlib==2.1.0           # via requests-oauthlib, social-auth-core
 pillow==5.3.0             # via django-markdownx
