--- a/requirements.txt
+++ b/requirements.txt
@@ -7,21 +7,22 @@
 -e git+https://github.com/city-of-helsinki/django-helusers.git#egg=django-helusers
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 certifi==2018.10.15       # via requests
-chardet==3.0.3            # via requests
+chardet==3.0.4            # via requests
 defusedxml==0.5.0         # via python3-openid, social-auth-core
 django-cors-headers==2.4.0
 django-environ==0.4.5
-django-extensions==2.1.3
+django-extensions==2.1.4
 django-filter==2.0.0
 django-js-asset==1.1.0    # via django-mptt
-django-markdownx==2.0.27
+django-markdownx==2.0.28
 django-mptt==0.9.1
 django-ordered-model==3.1.1
 django==2.1.3
 djangorestframework-jsonapi==2.6.0
 djangorestframework==3.9.0
 drf-oidc-auth==0.9
-future==0.17.1            # via pyjwkest
+ecdsa==0.13               # via python-jose
+future==0.17.1            # via pyjwkest, python-jose
 idna==2.7                 # via requests
 inflection==0.3.1         # via djangorestframework-jsonapi
 lxml==4.2.5
@@ -29,16 +30,19 @@ markdown==3.0.1
 oauthlib==2.1.0           # via requests-oauthlib, social-auth-core
 pillow==5.3.0             # via django-markdownx
 psycopg2-binary==2.7.6.1
+pyasn1==0.4.4             # via rsa
 pycryptodomex==3.7.0      # via pyjwkest
 pyjwkest==1.4.0           # via drf-oidc-auth
 pyjwt==1.6.4              # via social-auth-core
+python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
 pytz==2018.7              # via django
 requests-oauthlib==1.0.0  # via social-auth-core
 requests==2.20.1          # via pyjwkest, requests-oauthlib, social-auth-core
-six==1.11.0               # via django-extensions, djangorestframework-jsonapi, pyjwkest, social-auth-app-django, social-auth-core
+rsa==4.0                  # via python-jose
+six==1.11.0               # via django-extensions, djangorestframework-jsonapi, pyjwkest, python-jose, social-auth-app-django, social-auth-core
 social-auth-app-django==3.1.0
 social-auth-core==2.0.0   # via social-auth-app-django
 swapper==1.1.0
 urllib3==1.24.1           # via requests
-whitenoise==4.1.1
+whitenoise==4.1.2
