--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -19,6 +19,7 @@ COPY . /code/
 WORKDIR /code
 RUN rm -f local_settings.py
 RUN ./manage.py collectstatic --no-input
+RUN ./manage.py compilemessages
 COPY ./docker/app/docker-entrypoint.sh /
 
 ENTRYPOINT ["/bin/bash", "/docker-entrypoint.sh"]
