--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@
 #
 -e git+https://github.com/city-of-helsinki/django-helusers.git#egg=django-helusers
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
+-e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
 certifi==2018.10.15       # via requests
 chardet==3.0.4            # via requests
 defusedxml==0.5.0         # via python3-openid, social-auth-core
@@ -18,13 +19,12 @@ django-markdownx==2.0.28
 django-mptt==0.9.1
 django-ordered-model==3.1.1
 django==2.1.3
-djangorestframework-jsonapi==2.6.0
 djangorestframework==3.9.0
 drf-oidc-auth==0.9
 ecdsa==0.13               # via python-jose
 future==0.17.1            # via pyjwkest, python-jose
 idna==2.7                 # via requests
-inflection==0.3.1         # via djangorestframework-jsonapi
+inflection==0.3.1
 lxml==4.2.5
 markdown==3.0.1
 oauthlib==2.1.0           # via requests-oauthlib, social-auth-core
@@ -40,7 +40,7 @@ pytz==2018.7              # via django
 requests-oauthlib==1.0.0  # via social-auth-core
 requests==2.20.1          # via pyjwkest, requests-oauthlib, social-auth-core
 rsa==4.0                  # via python-jose
-six==1.11.0               # via django-extensions, djangorestframework-jsonapi, pyjwkest, python-jose, social-auth-app-django, social-auth-core
+six==1.11.0               # via django-extensions, pyjwkest, python-jose, social-auth-app-django, social-auth-core
 social-auth-app-django==3.1.0
 social-auth-core==2.0.0   # via social-auth-app-django
 swapper==1.1.0
