--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@
 -e git+https://github.com/city-of-helsinki/django-helusers.git#egg=django-helusers
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 -e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
-certifi==2018.10.15       # via requests
+certifi==2018.11.29       # via requests
 chardet==3.0.4            # via requests
+decorator==4.3.0          # via plotly, traitlets
 defusedxml==0.5.0         # via python3-openid, social-auth-core
 django-cors-headers==2.4.0
 django-environ==0.4.5
@@ -18,31 +19,38 @@ django-js-asset==1.1.0    # via django-mptt
 django-markdownx==2.0.28
 django-mptt==0.9.1
 django-ordered-model==3.1.1
-django==2.1.3
+django==2.1.4
 djangorestframework==3.9.0
 drf-oidc-auth==0.9
 ecdsa==0.13               # via python-jose
 future==0.17.1            # via pyjwkest, python-jose
-idna==2.7                 # via requests
+idna==2.8                 # via requests
 inflection==0.3.1
+ipython-genutils==0.2.0   # via nbformat, traitlets
+jsonschema==2.6.0         # via nbformat
+jupyter-core==4.4.0       # via nbformat
 lxml==4.2.5
 markdown==3.0.1
+nbformat==4.4.0           # via plotly
 oauthlib==2.1.0           # via requests-oauthlib, social-auth-core
 pillow==5.3.0             # via django-markdownx
+plotly==3.4.2
 psycopg2-binary==2.7.6.1
 pyasn1==0.4.4             # via rsa
-pycryptodomex==3.7.0      # via pyjwkest
+pycryptodomex==3.7.2      # via pyjwkest
 pyjwkest==1.4.0           # via drf-oidc-auth
-pyjwt==1.6.4              # via social-auth-core
+pyjwt==1.7.1              # via social-auth-core
 python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
-pytz==2018.7              # via django
+pytz==2018.7              # via django, plotly
 requests-oauthlib==1.0.0  # via social-auth-core
-requests==2.20.1          # via pyjwkest, requests-oauthlib, social-auth-core
+requests==2.21.0          # via plotly, pyjwkest, requests-oauthlib, social-auth-core
+retrying==1.3.3           # via plotly
 rsa==4.0                  # via python-jose
-six==1.11.0               # via django-extensions, pyjwkest, python-jose, social-auth-app-django, social-auth-core
+six==1.12.0               # via django-extensions, plotly, pyjwkest, python-jose, retrying, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==3.1.0
 social-auth-core==2.0.0   # via social-auth-app-django
 swapper==1.1.0
+traitlets==4.3.2          # via jupyter-core, nbformat
 urllib3==1.24.1           # via requests
 whitenoise==4.1.2
