--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
       - DATABASE_URL=postgres://aplans@db/aplans
       - DEBUG
       - ALLOWED_HOSTS
+      - COOKIE_PREFIX
+      - INTERNAL_IPS
+      - SENTRY_DSN
+      - SECRET_KEY
     ports:
       - "${HOST_PORT}:8000"
     depends_on:
