--- a/requirements.in
+++ b/requirements.in
@@ -18,3 +18,6 @@ python-jose
 plotly
 django-summernote
 ipython  # install for development convenience for now
+django-image-cropping
+easy-thumbnails
+Pillow
