--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,20 @@ certifi==2018.11.29       # via requests
 chardet==3.0.4            # via requests
 decorator==4.3.0          # via ipython, plotly, traitlets
 defusedxml==0.5.0         # via python3-openid, social-auth-core
+django-appconf==1.0.2     # via django-image-cropping
 django-cors-headers==2.4.0
 django-environ==0.4.5
 django-extensions==2.1.4
 django-filter==2.0.0
+django-image-cropping==1.2.0
 django-js-asset==1.1.0    # via django-mptt
 django-mptt==0.9.1
 django-ordered-model==3.1.1
 django-summernote==0.8.11.4
 django==2.1.5
-djangorestframework==3.9.0
+djangorestframework==3.9.1
 drf-oidc-auth==0.9
+easy-thumbnails==2.5
 ecdsa==0.13               # via python-jose
 future==0.17.1            # via pyjwkest, python-jose
 idna==2.8                 # via requests
@@ -39,6 +42,7 @@ oauthlib==3.0.0           # via requests-oauthlib, social-auth-core
 parso==0.3.1              # via jedi
 pexpect==4.6.0            # via ipython
 pickleshare==0.7.5        # via ipython
+pillow==5.4.1
 plotly==3.5.0
 prompt-toolkit==2.0.7     # via ipython
 psycopg2-binary==2.7.6.1
@@ -55,7 +59,7 @@ requests-oauthlib==1.2.0  # via social-auth-core
 requests==2.21.0          # via plotly, pyjwkest, requests-oauthlib, social-auth-core
 retrying==1.3.3           # via plotly
 rsa==4.0                  # via python-jose
-six==1.12.0               # via django-extensions, plotly, prompt-toolkit, pyjwkest, python-jose, retrying, social-auth-app-django, social-auth-core, traitlets
+six==1.12.0               # via django-extensions, django-image-cropping, plotly, prompt-toolkit, pyjwkest, python-jose, retrying, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==3.1.0
 social-auth-core==3.0.0   # via social-auth-app-django
 swapper==1.1.0
