--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,7 @@
 django
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 djangorestframework
--e git+https://github.com/city-of-helsinki/django-helusers.git#egg=django-helusers
+django-helusers
 -e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
 django-helusers
 social-auth-app-django
