--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,19 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
--e git+https://github.com/city-of-helsinki/django-helusers.git#egg=django-helusers
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 -e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
 backcall==0.1.0           # via ipython
 certifi==2018.11.29       # via requests
 chardet==3.0.4            # via requests
-decorator==4.3.0          # via ipython, plotly, traitlets
+decorator==4.3.2          # via ipython, plotly, traitlets
 defusedxml==0.5.0         # via python3-openid, social-auth-core
 django-appconf==1.0.2     # via django-image-cropping
 django-cors-headers==2.4.0
 django-environ==0.4.5
 django-extensions==2.1.4
-django-filter==2.0.0
+django-filter==2.1.0
+django-helusers==0.4.3
 django-image-cropping==1.2.0
 django-js-asset==1.1.0    # via django-mptt
 django-mptt==0.9.1
@@ -24,7 +24,7 @@ django-ordered-model==3.1.1
 django-summernote==0.8.11.4
 django==2.1.5
 djangorestframework==3.9.1
-drf-oidc-auth==0.9
+drf-oidc-auth==0.9        # via django-helusers
 easy-thumbnails==2.5
 ecdsa==0.13               # via python-jose
 future==0.17.1            # via pyjwkest, python-jose
@@ -38,17 +38,17 @@ jupyter-core==4.4.0       # via nbformat
 lxml==4.3.0
 markdown==3.0.1
 nbformat==4.4.0           # via plotly
-oauthlib==3.0.0           # via requests-oauthlib, social-auth-core
-parso==0.3.1              # via jedi
+oauthlib==3.0.1           # via requests-oauthlib, social-auth-core
+parso==0.3.2              # via jedi
 pexpect==4.6.0            # via ipython
 pickleshare==0.7.5        # via ipython
 pillow==5.4.1
 plotly==3.5.0
 prompt-toolkit==2.0.7     # via ipython
-psycopg2-binary==2.7.6.1
+psycopg2-binary==2.7.7
 ptyprocess==0.6.0         # via pexpect
 pyasn1==0.4.5             # via rsa
-pycryptodomex==3.7.2      # via pyjwkest
+pycryptodomex==3.7.3      # via pyjwkest
 pygments==2.3.1           # via ipython
 pyjwkest==1.4.0           # via drf-oidc-auth
 pyjwt==1.7.1              # via social-auth-core
@@ -56,7 +56,7 @@ python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
 pytz==2018.9              # via django, plotly
 requests-oauthlib==1.2.0  # via social-auth-core
-requests==2.21.0          # via plotly, pyjwkest, requests-oauthlib, social-auth-core
+requests==2.21.0          # via django-helusers, plotly, pyjwkest, requests-oauthlib, social-auth-core
 retrying==1.3.3           # via plotly
 rsa==4.0                  # via python-jose
 six==1.12.0               # via django-extensions, django-image-cropping, plotly, prompt-toolkit, pyjwkest, python-jose, retrying, social-auth-app-django, social-auth-core, traitlets
