Add environment variables to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,9 @@ services:
       - INTERNAL_IPS
       - SENTRY_DSN
       - SECRET_KEY
+      - OIDC_ISSUER_URL
+      - OIDC_CLIENT_ID
+      - OIDC_CLIENT_SECRET
     ports:
       - "${HOST_PORT}:8000"
     depends_on:
