Add first version of tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,11 @@ ignore = E309
 
 [pydocstyle]
 ignore=D100,D104,D105,D200,D203,D400
+
+[tool:pytest]
+DJANGO_SETTINGS_MODULE = aplans.settings
+norecursedirs = node_modules .git venv
+flake8-ignore =
+    */tests/*.py ALL
+    */migrations/*.py ALL
+addopts = --cov aplans --cov actions --cov indicators --cov users --cov insight --cov  people
