--- a/requirements.txt
+++ b/requirements.txt
@@ -6,61 +6,69 @@
 #
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 -e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
+aniso8601==3.0.2          # via graphene
 atomicwrites==1.3.0       # via pytest
-attrs==18.2.0             # via pytest
+attrs==19.1.0             # via jsonschema, pytest
 backcall==0.1.0           # via ipython
-certifi==2018.11.29       # via requests, sentry-sdk
+certifi==2019.3.9         # via requests, sentry-sdk
 chardet==3.0.4            # via requests
-coverage==4.5.2           # via pytest-cov
-decorator==4.3.2          # via ipython, plotly, traitlets
+coverage==4.5.3           # via pytest-cov
+decorator==4.4.0          # via ipython, plotly, traitlets
 defusedxml==0.5.0         # via python3-openid, social-auth-core
-django-appconf==1.0.2     # via django-image-cropping
-django-cors-headers==2.4.0
+django-appconf==1.0.3     # via django-image-cropping
+django-cors-headers==2.5.2
 django-environ==0.4.5
 django-extensions==2.1.6
 django-filter==2.1.0
-django-helusers==0.4.4
+django-helusers==0.4.5
 django-image-cropping==1.2.0
 django-js-asset==1.2.2    # via django-mptt
 django-mptt==0.9.1
 django-ordered-model==3.1.1
 django-summernote==0.8.11.4
-django==2.1.7
-djangorestframework==3.9.1
+django==2.2
+djangorestframework==3.9.2
 drf-oidc-auth==0.9        # via django-helusers
 easy-thumbnails==2.6
 ecdsa==0.13               # via python-jose
 future==0.17.1            # via pyjwkest, python-jose
+graphene-django-optimizer==0.3.6
+graphene-django==2.2.0
+graphene==2.1.3           # via graphene-django
+graphql-core==2.1         # via graphene, graphene-django, graphql-relay
+graphql-relay==0.4.5      # via graphene
 idna==2.8                 # via requests
 inflection==0.3.1
 ipython-genutils==0.2.0   # via nbformat, traitlets
-ipython==7.3.0
-jedi==0.13.2              # via ipython
-jsonschema==2.6.0         # via nbformat
+ipython==7.4.0
+jedi==0.13.3              # via ipython
+jsonschema==3.0.1         # via nbformat
 jupyter-core==4.4.0       # via nbformat
-lxml==4.3.1
-markdown==3.0.1
-more-itertools==6.0.0     # via pytest
+lxml==4.3.3
+markdown==3.1
+more-itertools==7.0.0     # via pytest
 nbformat==4.4.0           # via plotly
 oauthlib==3.0.1           # via requests-oauthlib, social-auth-core
-parso==0.3.4              # via jedi
-pexpect==4.6.0            # via ipython
+parso==0.4.0              # via jedi
+pexpect==4.7.0            # via ipython
 pickleshare==0.7.5        # via ipython
-pillow==5.4.1
-plotly==3.6.1
-pluggy==0.8.1             # via pytest
+pillow==6.0.0
+plotly==3.7.1
+pluggy==0.9.0             # via pytest
+promise==2.2.1            # via graphene, graphene-django, graphql-core, graphql-relay
 prompt-toolkit==2.0.9     # via ipython
-psycopg2-binary==2.7.7
+psycopg2-binary==2.8.1
 ptyprocess==0.6.0         # via pexpect
 py==1.8.0                 # via pytest
 pyasn1==0.4.5             # via rsa
-pycryptodomex==3.7.3      # via pyjwkest
+pycryptodomex==3.8.1      # via pyjwkest
 pygments==2.3.1           # via ipython
 pyjwkest==1.4.0           # via drf-oidc-auth
 pyjwt==1.7.1              # via social-auth-core
+pyrsistent==0.14.11       # via jsonschema
 pytest-cov==2.6.1
-pytest-django==3.4.7
-pytest==4.3.0             # via pytest-cov, pytest-django
+pytest-django==3.4.8
+pytest==4.4.0             # via pytest-cov, pytest-django
 python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
 pytz==2018.9              # via django, plotly
@@ -68,10 +76,13 @@ requests-oauthlib==1.2.0  # via social-auth-core
 requests==2.21.0          # via django-helusers, plotly, pyjwkest, requests-oauthlib, social-auth-core
 retrying==1.3.3           # via plotly
 rsa==4.0                  # via python-jose
-sentry-sdk==0.7.3
-six==1.12.0               # via django-extensions, django-image-cropping, plotly, prompt-toolkit, pyjwkest, pytest, python-jose, retrying, social-auth-app-django, social-auth-core, traitlets
+rx==1.6.1                 # via graphql-core
+sentry-sdk==0.7.10
+singledispatch==3.4.0.3   # via graphene-django
+six==1.12.0               # via django-appconf, django-extensions, django-image-cropping, graphene, graphene-django, graphql-core, graphql-relay, jsonschema, plotly, promise, prompt-toolkit, pyjwkest, pyrsistent, pytest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==3.1.0
 social-auth-core==3.1.0   # via social-auth-app-django
+sqlparse==0.3.0           # via django
 swapper==1.1.0
 traitlets==4.3.2          # via ipython, jupyter-core, nbformat
 urllib3==1.24.1           # via requests, sentry-sdk
