Add support for posting and getting indicator values

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 -e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
-aniso8601==3.0.2          # via graphene
+aniso8601==3.0.2
 atomicwrites==1.3.0       # via pytest
 attrs==19.1.0             # via jsonschema, pytest
 backcall==0.1.0           # via ipython
@@ -71,7 +71,7 @@ pytest-django==3.4.8
 pytest==4.4.0             # via pytest-cov, pytest-django
 python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
-pytz==2018.9              # via django, plotly
+pytz==2019.1              # via django, plotly
 requests-oauthlib==1.2.0  # via social-auth-core
 requests==2.21.0          # via django-helusers, plotly, pyjwkest, requests-oauthlib, social-auth-core
 retrying==1.3.3           # via plotly
