--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ coverage==4.5.3           # via pytest-cov
 decorator==4.4.0          # via ipython, plotly, traitlets
 defusedxml==0.6.0         # via python3-openid, social-auth-core
 django-appconf==1.0.3     # via django-image-cropping
-django-cors-headers==2.5.2
+django-cors-headers==3.0.1
 django-environ==0.4.5
-django-extensions==2.1.6
+django-extensions==2.1.7
 django-filter==2.1.0
 django-helusers==0.4.5
 django-image-cropping==1.2.0
@@ -26,13 +26,13 @@ django-js-asset==1.2.2    # via django-mptt
 django-mptt==0.10.0
 django-ordered-model==3.1.1
 django-summernote==0.8.11.4
-django==2.2
-djangorestframework==3.9.2
+django==2.2.1
+djangorestframework==3.9.4
 drf-oidc-auth==0.9        # via django-helusers
 easy-thumbnails==2.6
 ecdsa==0.13.2             # via python-jose
 future==0.17.1            # via pyjwkest, python-jose
-graphene-django-optimizer==0.3.6
+graphene-django-optimizer==0.4.0
 graphene-django==2.2.0
 graphene==2.1.3           # via graphene-django
 graphql-core==2.1         # via graphene, graphene-django, graphql-relay
@@ -53,8 +53,8 @@ parso==0.4.0              # via jedi
 pexpect==4.7.0            # via ipython
 pickleshare==0.7.5        # via ipython
 pillow==6.0.0
-plotly==3.8.1
-pluggy==0.9.0             # via pytest
+plotly==3.9.0
+pluggy==0.11.0            # via pytest
 promise==2.2.1            # via graphene, graphene-django, graphql-core, graphql-relay
 prompt-toolkit==2.0.9     # via ipython
 psycopg2-binary==2.8.2
@@ -62,22 +62,22 @@ ptyprocess==0.6.0         # via pexpect
 py==1.8.0                 # via pytest
 pyasn1==0.4.5             # via rsa
 pycryptodomex==3.8.1      # via pyjwkest
-pygments==2.3.1           # via ipython
+pygments==2.4.0           # via ipython
 pyjwkest==1.4.0           # via drf-oidc-auth
 pyjwt==1.7.1              # via social-auth-core
-pyrsistent==0.15.1        # via jsonschema
-pytest-cov==2.6.1
+pyrsistent==0.15.2        # via jsonschema
+pytest-cov==2.7.1
 pytest-django==3.4.8
-pytest==4.4.1             # via pytest-cov, pytest-django
+pytest==4.5.0             # via pytest-cov, pytest-django
 python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
 pytz==2019.1              # via django, plotly
 requests-oauthlib==1.2.0  # via social-auth-core
-requests==2.21.0          # via django-helusers, plotly, pyjwkest, requests-oauthlib, social-auth-core
+requests==2.22.0          # via django-helusers, plotly, pyjwkest, requests-oauthlib, social-auth-core
 retrying==1.3.3           # via plotly
 rsa==4.0                  # via python-jose
 rx==1.6.1                 # via graphql-core
-sentry-sdk==0.7.12
+sentry-sdk==0.8.0
 singledispatch==3.4.0.3   # via graphene-django
 six==1.12.0               # via django-appconf, django-extensions, django-image-cropping, graphene, graphene-django, graphql-core, graphql-relay, jsonschema, plotly, promise, prompt-toolkit, pyjwkest, pyrsistent, pytest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==3.1.0
@@ -85,5 +85,5 @@ social-auth-core==3.1.0   # via social-auth-app-django
 sqlparse==0.3.0           # via django
 swapper==1.1.0
 traitlets==4.3.2          # via ipython, jupyter-core, nbformat
-urllib3==1.24.2           # via requests, sentry-sdk
-wcwidth==0.1.7            # via prompt-toolkit
+urllib3==1.25.2           # via requests, sentry-sdk
+wcwidth==0.1.7            # via prompt-toolkit, pytest
