--- a/requirements.txt
+++ b/requirements.txt
@@ -18,15 +18,15 @@ defusedxml==0.6.0         # via python3-openid, social-auth-core
 django-admin-numeric-filter==0.1.5
 django-admin-ordering==0.11.0
 django-appconf==1.0.3     # via django-image-cropping
+django-ckeditor==5.7.1
 django-cors-headers==3.1.0
 django-environ==0.4.5
 django-extensions==2.2.1
 django-filter==2.2.0
 django-helusers==0.5.0
 django-image-cropping==1.2.0
-django-js-asset==1.2.2    # via django-admin-ordering, django-mptt
+django-js-asset==1.2.2    # via django-admin-ordering, django-ckeditor, django-mptt
 django-mptt==0.10.0
-django-summernote==0.8.11.4
 django==2.2.5
 djangorestframework==3.10.3
 drf-oidc-auth==0.9        # via django-helusers
