--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@
 -e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
 aniso8601==7.0.0
 atomicwrites==1.3.0       # via pytest
-attrs==19.1.0             # via packaging, pytest
+attrs==19.2.0             # via pytest
 backcall==0.1.0           # via ipython
 certifi==2019.9.11        # via requests, sentry-sdk
 chardet==3.0.4            # via requests
@@ -20,7 +20,7 @@ django-admin-numeric-filter==0.1.5
 django-admin-ordering==0.11.0
 django-appconf==1.0.3     # via django-image-cropping
 django-ckeditor==5.7.1
-django-cors-headers==3.1.0
+django-cors-headers==3.1.1
 django-environ==0.4.5
 django-extensions==2.2.1
 django-filter==2.2.0
@@ -28,19 +28,19 @@ django-helusers==0.5.1
 django-image-cropping==1.2.0
 django-js-asset==1.2.2    # via django-admin-ordering, django-ckeditor, django-mptt
 django-mptt==0.10.0
-django==2.2.5
+django==2.2.6
 djangorestframework==3.10.3
 drf-oidc-auth==0.9        # via django-helusers
 easy-thumbnails==2.6
 ecdsa==0.13.2             # via python-jose
 future==0.17.1            # via pyjwkest, python-jose
 graphene-django-optimizer==0.6.0
-graphene-django==2.5.0
+graphene-django==2.6.0
 graphene==2.1.8           # via graphene-django
 graphql-core==2.2.1       # via graphene, graphene-django, graphql-relay
 graphql-relay==2.0.0      # via graphene
 idna==2.8                 # via requests
-importlib-metadata==0.22  # via pluggy, pytest
+importlib-metadata==0.23  # via pluggy, pytest
 inflection==0.3.1
 ipython-genutils==0.2.0   # via traitlets
 ipython==7.8.0
@@ -49,11 +49,11 @@ lxml==4.4.1
 markdown==3.1.1
 more-itertools==7.2.0     # via pytest, zipp
 oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
-packaging==19.1           # via pytest
+packaging==19.2           # via pytest
 parso==0.5.1              # via jedi
 pexpect==4.7.0            # via ipython
 pickleshare==0.7.5        # via ipython
-pillow==6.1.0
+pillow==6.2.0
 plotly==4.1.1
 pluggy==0.13.0            # via pytest
 promise==2.2.1            # via graphene-django, graphql-core, graphql-relay
@@ -69,7 +69,7 @@ pyjwt==1.7.1              # via social-auth-core
 pyparsing==2.4.2          # via packaging
 pytest-cov==2.7.1
 pytest-django==3.5.1
-pytest==5.1.2             # via pytest-cov, pytest-django
+pytest==5.2.0             # via pytest-cov, pytest-django
 python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
 pytz==2019.2              # via django
@@ -78,7 +78,7 @@ requests==2.22.0          # via django-helusers, pyjwkest, requests-oauthlib, so
 retrying==1.3.3           # via plotly
 rsa==4.0                  # via python-jose
 rx==1.6.1                 # via graphql-core
-sentry-sdk==0.11.2
+sentry-sdk==0.12.2
 singledispatch==3.4.0.3   # via graphene-django
 six==1.12.0               # via django-appconf, django-extensions, django-image-cropping, graphene, graphene-django, graphql-core, graphql-relay, packaging, plotly, promise, prompt-toolkit, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==3.1.0
@@ -86,6 +86,6 @@ social-auth-core==3.2.0   # via social-auth-app-django
 sqlparse==0.3.0           # via django
 swapper==1.1.1
 traitlets==4.3.2          # via ipython
-urllib3==1.25.3           # via requests, sentry-sdk
+urllib3==1.25.6           # via requests, sentry-sdk
 wcwidth==0.1.7            # via prompt-toolkit, pytest
 zipp==0.6.0               # via importlib-metadata
