--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -10,15 +10,17 @@ RUN mkdir -p /srv/media
 
 # Install PostgreSQL 11
 RUN apt-get update
-RUN apt-get install -y gnupg wget lsb-release
+RUN apt-get install -y gnupg wget lsb-release software-properties-common
 RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=1 apt-key add -
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -sc)-pgdg main" > /etc/apt/sources.list.d/postgres.list
+RUN add-apt-repository ppa:deadsnakes/ppa
 RUN apt-get update
-RUN apt-get install -y python3.7 python3-pip \
+RUN apt-get install -y python3.8 python3-pip libpython3.8-dev \
 	postgresql-client-common postgresql-client libpq-dev \
 	gettext git-core
-RUN ln -s /usr/bin/python3 /usr/bin/python
-RUN ln -s /usr/bin/pip3 /usr/bin/pip
+RUN ln -fs /usr/bin/python3.8 /usr/bin/python3
+RUN ln -fs /usr/bin/python3 /usr/bin/python
+RUN ln -fs /usr/bin/pip3 /usr/bin/pip
 RUN pip install --upgrade pip
 COPY requirements.txt /code/
 RUN pip install -r /code/requirements.txt
