--- a/requirements.txt
+++ b/requirements.txt
@@ -7,97 +7,100 @@
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 -e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
 aniso8601==7.0.0
-atomicwrites==1.3.0       # via pytest
-attrs==19.2.0             # via pytest
+attrs==19.3.0             # via pytest
 backcall==0.1.0           # via ipython
-certifi==2019.9.11        # via requests, sentry-sdk
+certifi==2019.11.28       # via requests, sentry-sdk
 chardet==3.0.4            # via requests
 coverage==4.5.4           # via pytest-cov
-decorator==4.4.0          # via ipython, traitlets
+decorator==4.4.1          # via ipython, traitlets
 defusedxml==0.6.0         # via odfpy, python3-openid, social-auth-core
 diff-match-patch==20181111  # via django-import-export
 django-admin-autocomplete-filter==0.3
 django-admin-numeric-filter==0.1.5
-django-admin-ordering==0.11.0
+django-admin-ordering==0.12.0
+django-anymail[mailgun]==7.0.0
 django-appconf==1.0.3     # via django-image-cropping
-django-ckeditor==5.7.1
-django-cors-headers==3.1.1
+django-ckeditor==5.8.0
+django-cors-headers==3.2.0
 django-environ==0.4.5
-django-extensions==2.2.1
+django-extensions==2.2.5
 django-filter==2.2.0
-django-helusers==0.5.1
+django-helusers==0.5.2
 django-image-cropping==1.2.0
-django-import-export==1.2.0
+django-import-export==2.0
 django-js-asset==1.2.2    # via django-admin-ordering, django-ckeditor, django-mptt
 django-mptt==0.10.0
-django==2.2.6
+django-parler==2.0
+django==2.2.8
 djangorestframework==3.10.3
 drf-oidc-auth==0.9        # via django-helusers
 easy-thumbnails==2.6
-ecdsa==0.13.2             # via python-jose
+ecdsa==0.14.1             # via python-jose
 et-xmlfile==1.0.1         # via openpyxl
-future==0.17.1            # via pyjwkest, python-jose
-graphene-django-optimizer==0.6.0
-graphene-django==2.5.0
+future==0.18.2            # via pyjwkest, python-jose
+graphene-django-optimizer==0.6.1
+graphene-django==2.7.1
 graphene==2.1.8           # via graphene-django
 graphql-core==2.2.1       # via graphene, graphene-django, graphql-relay
 graphql-relay==2.0.0      # via graphene
 idna==2.8                 # via requests
 inflection==0.3.1
 ipython-genutils==0.2.0   # via traitlets
-ipython==7.8.0
+ipython==7.10.1
 jdcal==1.4.1              # via openpyxl
 jedi==0.15.1              # via ipython
-lxml==4.4.1
+jinja2==2.10.3
+lxml==4.4.2
 markdown==3.1.1
 markuppy==1.14            # via tablib
-more-itertools==7.2.0     # via pytest
+markupsafe==1.1.1         # via jinja2
+more-itertools==8.0.0     # via pytest
 oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
 odfpy==1.4.0              # via tablib
-openpyxl==3.0.0           # via tablib
+openpyxl==3.0.2           # via tablib
 packaging==19.2           # via pytest
 parso==0.5.1              # via jedi
 pexpect==4.7.0            # via ipython
 pickleshare==0.7.5        # via ipython
-pillow==6.2.0
-plotly==4.1.1
-pluggy==0.13.0            # via pytest
+pillow==6.2.1
+plotly==4.3.0
+pluggy==0.13.1            # via pytest
 promise==2.2.1            # via graphene-django, graphql-core, graphql-relay
-prompt-toolkit==2.0.9     # via ipython
-psycopg2-binary==2.8.3
+prompt-toolkit==3.0.2     # via ipython
+psycopg2-binary==2.8.4
 ptyprocess==0.6.0         # via pexpect
 py==1.8.0                 # via pytest
-pyasn1==0.4.7             # via rsa
-pycryptodomex==3.9.0      # via pyjwkest
-pygments==2.4.2           # via ipython
+pyasn1==0.4.8             # via rsa
+pycryptodomex==3.9.4      # via pyjwkest
+pygments==2.5.2           # via ipython
 pyjwkest==1.4.2           # via drf-oidc-auth
 pyjwt==1.7.1              # via social-auth-core
-pyparsing==2.4.2          # via packaging
-pytest-cov==2.7.1
-pytest-django==3.5.1
-pytest==5.2.0             # via pytest-cov, pytest-django
+pyparsing==2.4.5          # via packaging
+pytest-cov==2.8.1
+pytest-django==3.7.0
+pytest==5.3.1             # via pytest-cov, pytest-django
 python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
-pytz==2019.2              # via django
-pyyaml==5.1.2             # via tablib
-requests-oauthlib==1.2.0  # via social-auth-core
-requests==2.22.0          # via django-helusers, pyjwkest, requests-oauthlib, social-auth-core
+pytz==2019.3              # via django
+pyyaml==5.2               # via tablib
+requests-oauthlib==1.3.0  # via social-auth-core
+requests==2.22.0          # via django-anymail, django-helusers, pyjwkest, requests-oauthlib, social-auth-core
 retrying==1.3.3           # via plotly
 rsa==4.0                  # via python-jose
 rx==1.6.1                 # via graphql-core
-sentry-sdk==0.12.2
+sentry-sdk==0.13.4
 singledispatch==3.4.0.3   # via graphene-django
-six==1.12.0               # via django-appconf, django-extensions, django-image-cropping, graphene, graphene-django, graphql-core, graphql-relay, packaging, plotly, promise, prompt-toolkit, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
+six==1.13.0               # via django-anymail, django-appconf, django-extensions, django-image-cropping, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==3.1.0
 social-auth-core==3.2.0   # via social-auth-app-django
 sqlparse==0.3.0           # via django
 swapper==1.1.1
 tablib==0.14.0            # via django-import-export
-traitlets==4.3.2          # via ipython
-urllib3==1.25.6           # via requests, sentry-sdk
+traitlets==4.3.3          # via ipython
+urllib3==1.25.7           # via requests, sentry-sdk
 wcwidth==0.1.7            # via prompt-toolkit, pytest
 xlrd==1.2.0               # via tablib
 xlwt==1.3.0               # via tablib
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.6.0        # via ipython, markdown
+# setuptools==42.0.2        # via ipython, markdown
