Add mailgun env variables to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,9 @@ services:
       - OIDC_ISSUER_URL
       - OIDC_CLIENT_ID
       - OIDC_CLIENT_SECRET
+      - MAILGUN_API_KEY
+      - MAILGUN_SENDER_DOMAIN
+      - MAILGUN_REGION
     ports:
       - "${HOST_PORT:-8000}:8000"
     depends_on:
