--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 -e git+https://github.com/juyrjola/django-rest-framework-json-api.git#egg=djangorestframework-jsonapi
 aniso8601==7.0.0
+attrs==19.3.0             # via pytest
 backcall==0.1.0           # via ipython
 certifi==2019.11.28       # via requests, sentry-sdk
 chardet==3.0.4            # via requests
+coverage==5.0             # via pytest-cov
 decorator==4.4.1          # via ipython, traitlets
 defusedxml==0.6.0         # via odfpy, python3-openid, social-auth-core
 diff-match-patch==20181111  # via django-import-export
@@ -53,23 +55,31 @@ lxml==4.4.2
 markdown==3.1.1
 markuppy==1.14            # via tablib
 markupsafe==1.1.1         # via jinja2
+more-itertools==8.0.2     # via pytest
 oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
 odfpy==1.4.0              # via tablib
 openpyxl==3.0.2           # via tablib
+packaging==19.2           # via pytest
 parso==0.5.1              # via jedi
 pexpect==4.7.0            # via ipython
 pickleshare==0.7.5        # via ipython
 pillow==6.2.1
 plotly==4.3.0
+pluggy==0.13.1            # via pytest
 promise==2.2.1            # via graphene-django, graphql-core, graphql-relay
 prompt-toolkit==3.0.2     # via ipython
 psycopg2-binary==2.8.4
 ptyprocess==0.6.0         # via pexpect
+py==1.8.0                 # via pytest
 pyasn1==0.4.8             # via rsa
 pycryptodomex==3.9.4      # via pyjwkest
 pygments==2.5.2           # via ipython
 pyjwkest==1.4.2           # via drf-oidc-auth
 pyjwt==1.7.1              # via social-auth-core
+pyparsing==2.4.5          # via packaging
+pytest-cov==2.8.1
+pytest-django==3.7.0
+pytest==5.3.2             # via pytest-cov, pytest-django
 python-jose==3.0.1
 python3-openid==3.1.0     # via social-auth-core
 pytz==2019.3              # via django
@@ -81,7 +91,7 @@ rsa==4.0                  # via python-jose
 rx==1.6.1                 # via graphql-core
 sentry-sdk==0.13.4
 singledispatch==3.4.0.3   # via graphene-django
-six==1.13.0               # via django-anymail, django-appconf, django-extensions, django-image-cropping, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
+six==1.13.0               # via django-anymail, django-appconf, django-extensions, django-image-cropping, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==3.1.0
 social-auth-core==3.2.0   # via social-auth-app-django
 sqlparse==0.3.0           # via django
@@ -89,7 +99,7 @@ swapper==1.1.1
 tablib==0.14.0            # via django-import-export
 traitlets==4.3.3          # via ipython
 urllib3==1.25.7           # via requests, sentry-sdk
-wcwidth==0.1.7            # via prompt-toolkit
+wcwidth==0.1.7            # via prompt-toolkit, pytest
 xlrd==1.2.0               # via tablib
 xlwt==1.3.0               # via tablib
 
