--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ ipython==7.10.2
 jdcal==1.4.1              # via openpyxl
 jedi==0.15.2              # via ipython
 jinja2==2.10.3
+libvoikko==4.3
 lxml==4.4.2
 markdown==3.1.1
 markuppy==1.14            # via tablib
@@ -104,4 +105,4 @@ xlrd==1.2.0               # via tablib
 xlwt==1.3.0               # via tablib
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==42.0.2        # via ipython, markdown
+# setuptools==44.0.0        # via ipython, markdown
