Initial wagtail support

--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,6 @@
-django<3.0
+django
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 djangorestframework
-django-helusers
 django-helusers
 social-auth-app-django
 psycopg2-binary
@@ -20,7 +19,7 @@ easy-thumbnails
 Pillow
 sentry-sdk
 graphene-django
--e git+https://github.com/juyrjola/graphene-django-optimizer.git#egg=graphene-django-optimizer
+graphene-django-optimizer
 aniso8601
 django-admin-numeric-filter
 django-admin-ordering
@@ -33,3 +32,6 @@ django-reversion
 pytest-django
 pytest-cov
 libvoikko
+django-modeltrans
+wagtail
+wagtail-autocomplete
