--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 #
 #    pip-compile
 #
+-e git+https://github.com/juyrjola/django-modelcluster.git#egg=django-modelcluster  # via -r requirements.in, wagtail
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy  # via -r requirements.in
 aniso8601==7.0.0          # via -r requirements.in, graphene
 asgiref==3.2.10           # via django
@@ -32,7 +33,6 @@ django-helusers==0.5.6    # via -r requirements.in
 django-image-cropping==1.4.0  # via -r requirements.in
 django-import-export==2.3.0  # via -r requirements.in
 django-js-asset==1.2.2    # via django-admin-ordering, django-ckeditor, django-mptt
-django-modelcluster==5.0.2  # via wagtail
 django-modeltrans==0.4.0  # via -r requirements.in
 django-mptt==0.11.0       # via django-orghierarchy
 django-parler==2.1        # via -r requirements.in
@@ -103,7 +103,7 @@ retrying==1.3.3           # via plotly
 rsa==4.6                  # via python-jose
 rustface==0.1.0           # via -r requirements.in
 rx==1.6.1                 # via graphql-core
-sentry-sdk==0.16.3        # via -r requirements.in
+sentry-sdk==0.16.4        # via -r requirements.in
 singledispatch==3.4.0.3   # via graphene-django
 six==1.15.0               # via cryptography, django-anymail, django-parler, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, html5lib, l18n, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==4.0.0  # via -r requirements.in
