Implement first version of multidimensional indicators

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:19.10
+FROM ubuntu:20.04
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
@@ -8,8 +8,9 @@ ENV MEDIA_ROOT /srv/media
 RUN mkdir /code
 RUN mkdir -p /srv/media
 
-# Install PostgreSQL 11
 RUN apt-get update
+
+# Install PostgreSQL 11
 RUN apt-get install -y gnupg wget lsb-release software-properties-common
 RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=1 apt-key add -
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -sc)-pgdg main" > /etc/apt/sources.list.d/postgres.list
@@ -18,9 +19,13 @@ RUN apt-get install -y python3.8 python3-pip libpython3.8-dev \
 	postgresql-client-common postgresql-client libpq-dev \
 	gettext git-core \
 	zlib1g-dev libjpeg8-dev libtiff-dev libopenjp2-7-dev libwebp-dev \
-	voikko-fi libhfstospell10
-RUN wget http://ftp.fi.debian.org/debian/pool/main/libv/libvoikko/libvoikko1_4.3-1_amd64.deb && \
-    dpkg -i libvoikko1_4.3-1_amd64.deb
+    nodejs npm
+
+RUN apt-get install -y voikko-fi libhfstospell10
+
+RUN wget http://ftp.fi.debian.org/debian/pool/main/libv/libvoikko/libvoikko1_4.3-1+b1_amd64.deb && \
+    wget http://ftp.fi.debian.org/debian/pool/main/h/hfst-ospell/libhfstospell11_0.5.2-1+b1_amd64.deb && \
+    dpkg -i libvoikko1_4.3-1+b1_amd64.deb libhfstospell11_0.5.2-1+b1_amd64.deb
 
 RUN ln -fs /usr/bin/python3.8 /usr/bin/python3
 RUN ln -fs /usr/bin/python3 /usr/bin/python
@@ -28,6 +33,9 @@ RUN ln -fs /usr/bin/pip3 /usr/bin/pip
 RUN pip install --upgrade pip
 COPY requirements.txt requirements-prod.txt /code/
 RUN pip install -r /code/requirements-prod.txt -r /code/requirements.txt
+
+COPY package.json /code/
+RUN npm install
 
 COPY . /code/
 WORKDIR /code
