--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy  # via -r requirements.in
 aniso8601==7.0.0          # via -r requirements.in, graphene
 asgiref==3.2.10           # via django
-attrs==19.3.0             # via pytest
+attrs==20.1.0             # via pytest
 backcall==0.2.0           # via ipython
 beautifulsoup4==4.8.2     # via wagtail
 certifi==2020.6.20        # via requests, sentry-sdk
@@ -25,7 +25,7 @@ django-admin-ordering==0.12.0  # via -r requirements.in
 django-anymail[mailgun]==7.2.1  # via -r requirements.in
 django-appconf==1.0.4     # via django-image-cropping
 django-ckeditor==5.9.0    # via -r requirements.in
-django-cors-headers==3.4.0  # via -r requirements.in
+django-cors-headers==3.5.0  # via -r requirements.in
 django-environ==0.4.5     # via -r requirements.in
 django-extensions==3.0.5  # via -r requirements.in
 django-filter==2.3.0      # via -r requirements.in, wagtail
@@ -35,6 +35,7 @@ django-import-export==2.3.0  # via -r requirements.in
 django-js-asset==1.2.2    # via django-admin-ordering, django-ckeditor, django-mptt
 django-modeltrans==0.4.0  # via -r requirements.in
 django-mptt==0.11.0       # via django-orghierarchy
+django-npm==1.0.0         # via -r requirements.in
 django-parler==2.1        # via -r requirements.in
 django-reversion==3.0.7   # via -r requirements.in
 django-taggit==1.3.0      # via wagtail
@@ -70,7 +71,7 @@ milksnake==0.1.5          # via rustface
 more-itertools==8.4.0     # via pytest
 oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
 odfpy==1.4.1              # via tablib
-openpyxl==3.0.4           # via tablib
+openpyxl==3.0.5           # via tablib
 packaging==20.4           # via pytest
 parso==0.7.1              # via jedi
 pexpect==4.8.0            # via ipython
@@ -103,7 +104,7 @@ retrying==1.3.3           # via plotly
 rsa==4.6                  # via python-jose
 rustface==0.1.0           # via -r requirements.in
 rx==1.6.1                 # via graphql-core
-sentry-sdk==0.16.5        # via -r requirements.in
+sentry-sdk==0.17.0        # via -r requirements.in
 singledispatch==3.4.0.3   # via graphene-django
 six==1.15.0               # via cryptography, django-anymail, django-parler, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, html5lib, l18n, packaging, plotly, promise, pyjwkest, python-jose, retrying, singledispatch, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==4.0.0  # via -r requirements.in
