Implement support for re-ordering actions in Wagtail admin

--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,7 @@
 django
 -e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
 -e git+https://github.com/juyrjola/django-modelcluster.git#egg=django-modelcluster
+-e git+https://github.com/kausaltech/wagtail-orderable.git#egg=wagtail-orderable
 djangorestframework
 django-helusers
 social-auth-app-django
