Ignore DeprecationWarnings from graphene

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,4 @@ norecursedirs = node_modules data .git venv Attic
 addopts = --cov aplans --cov actions --cov indicators --cov users --cov insight --cov  people
 filterwarnings =
     ignore::django.utils.deprecation.RemovedInDjango40Warning
+    ignore::DeprecationWarning:graphene
