--- a/requirements.txt
+++ b/requirements.txt
@@ -4,123 +4,355 @@
 #
 #    pip-compile requirements.in
 #
--e git+https://github.com/juyrjola/django-modelcluster.git#egg=django-modelcluster  # via -r requirements.in, wagtail
--e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy  # via -r requirements.in
--e git+https://github.com/kausaltech/wagtail-orderable.git#egg=wagtail-orderable  # via -r requirements.in
-aniso8601==7.0.0          # via -r requirements.in, graphene
-anyascii==0.1.7           # via wagtail
-asgiref==3.3.1            # via django
-attrs==20.3.0             # via pytest
-authlib==0.15.3           # via drf-oidc-auth
-beautifulsoup4==4.8.2     # via wagtail
-certifi==2020.12.5        # via requests, sentry-sdk
-cffi==1.14.4              # via cryptography, milksnake
-chardet==4.0.0            # via requests
-coreapi==2.3.3            # via -r requirements.in
-coreschema==0.0.4         # via coreapi
-coverage==5.3.1           # via pytest-cov
-cryptography==3.3.1       # via -r requirements.in, authlib, drf-oidc-auth, social-auth-core
-defusedxml==0.6.0         # via odfpy, python3-openid, social-auth-core
-diff-match-patch==20200713  # via django-import-export
-django-admin-autocomplete-filter==0.6.1  # via -r requirements.in
-django-admin-numeric-filter==0.1.6  # via -r requirements.in
-django-admin-ordering==0.13.1  # via -r requirements.in
-django-anymail[mailgun,sendgrid]==8.1  # via -r requirements.in
-django-appconf==1.0.4     # via django-image-cropping
-django-autocomplete-light==3.8.1  # via -r requirements.in
-django-ckeditor==6.0.0    # via -r requirements.in
-django-cors-headers==3.6.0  # via -r requirements.in
-django-environ==0.4.5     # via -r requirements.in
-django-extensions==3.1.0  # via -r requirements.in
-django-filter==2.4.0      # via -r requirements.in, wagtail
-django-helusers==0.5.6    # via -r requirements.in
-django-image-cropping==1.5.0  # via -r requirements.in
-django-import-export==2.5.0  # via -r requirements.in
-django-js-asset==1.2.2    # via django-admin-ordering, django-ckeditor, django-mptt
-django-modeltrans==0.5.2  # via -r requirements.in
-django-mptt==0.11.0       # via django-orghierarchy
-django-npm==1.0.0         # via -r requirements.in
-django-parler==2.2        # via -r requirements.in
-django-redis==4.12.1      # via -r requirements.in
-django-reversion==3.0.8   # via -r requirements.in
-django-taggit==1.3.0      # via wagtail
-django-treebeard==4.4     # via wagtail
-django==3.1.5             # via -r requirements.in, django-admin-autocomplete-filter, django-admin-numeric-filter, django-anymail, django-appconf, django-cors-headers, django-filter, django-helusers, django-import-export, django-modeltrans, django-mptt, django-redis, django-reversion, django-taggit, django-treebeard, djangorestframework, drf-oidc-auth, easy-thumbnails, graphene-django, wagtail, wagtail-grapple, wagtailfontawesome
-djangorestframework==3.12.2  # via -r requirements.in, django-orghierarchy, drf-oidc-auth, wagtail
-draftjs-exporter==2.1.7   # via wagtail
-drf-oidc-auth==1.0.0      # via django-helusers
-easy-thumbnails==2.7.1    # via -r requirements.in
-ecdsa==0.14.1             # via python-jose
-et-xmlfile==1.0.1         # via openpyxl
-graphene-django-optimizer==0.8.0  # via -r requirements.in
-graphene-django==2.13.0   # via -r requirements.in, wagtail-grapple
-graphene==2.1.8           # via graphene-django
-graphql-core==2.3.2       # via graphene, graphene-django, graphql-relay, wagtail-grapple
-graphql-relay==2.0.1      # via graphene
-html5lib==1.1             # via wagtail
-idna==2.10                # via requests
-iniconfig==1.1.1          # via pytest
-itypes==1.2.0             # via coreapi
-jdcal==1.4.1              # via openpyxl
-jinja2==2.11.2            # via -r requirements.in, coreschema
-l18n==2020.6.1            # via wagtail
-libvoikko==4.3            # via -r requirements.in
-lxml==4.6.2               # via -r requirements.in
-markdown==3.3.3           # via -r requirements.in
-markuppy==1.14            # via tablib
-markupsafe==1.1.1         # via jinja2
-milksnake==0.1.5          # via rustface
-oauthlib==3.1.0           # via requests-oauthlib, social-auth-core
-odfpy==1.4.1              # via tablib
-openpyxl==3.0.6           # via tablib
-packaging==20.8           # via pytest
-pillow==8.1.0             # via -r requirements.in, easy-thumbnails, wagtail
-plotly==4.14.3            # via -r requirements.in
-pluggy==0.13.1            # via pytest
-promise==2.3              # via graphene-django, graphql-core, graphql-relay
-psycopg2-binary==2.8.6    # via -r requirements.in
-py==1.10.0                # via pytest
-pyasn1==0.4.8             # via python-jose, rsa
-pycparser==2.20           # via cffi
-pyjwt==2.0.1              # via social-auth-core
-pyparsing==2.4.7          # via packaging
-pytest-cov==2.10.1        # via -r requirements.in
-pytest-django==4.1.0      # via -r requirements.in
-pytest==6.2.1             # via pytest-cov, pytest-django
-python-jose==3.2.0        # via -r requirements.in, django-helusers
-python3-openid==3.2.0     # via social-auth-core
-pytz==2020.5              # via django, l18n
-pyyaml==5.3.1             # via -r requirements.in, tablib
-redis==3.5.3              # via django-redis
-requests-oauthlib==1.3.0  # via social-auth-core
-requests==2.25.1          # via coreapi, django-anymail, django-helusers, django-orghierarchy, drf-oidc-auth, requests-oauthlib, social-auth-core, wagtail, wagtail-generic-chooser
-retrying==1.3.3           # via plotly
-rsa==4.7                  # via python-jose
-rustface==0.1.0           # via -r requirements.in
-rx==1.6.1                 # via graphql-core
-sentry-sdk==0.19.5        # via -r requirements.in
-singledispatch==3.4.0.3   # via graphene-django
-six==1.15.0               # via cryptography, django-autocomplete-light, ecdsa, graphene, graphene-django, graphql-core, graphql-relay, html5lib, l18n, plotly, promise, python-jose, retrying, singledispatch, social-auth-app-django
-social-auth-app-django==4.0.0  # via -r requirements.in
-social-auth-core==4.0.3   # via social-auth-app-django
-soupsieve==2.1            # via beautifulsoup4
-sqlparse==0.4.1           # via django
-swapper==1.1.2.post1      # via django-orghierarchy
-tablib[html,ods,xls,xlsx,yaml]==3.0.0  # via django-import-export, wagtail
-toml==0.10.2              # via pytest
-unidecode==1.1.2          # via graphene-django, wagtail
-uritemplate==3.0.1        # via -r requirements.in, coreapi
-urllib3==1.26.2           # via requests, sentry-sdk
-wagtail-autocomplete==0.6  # via -r requirements.in
-wagtail-condensedinlinepanel==0.5.3  # via -r requirements.in
-wagtail-generic-chooser==0.1.1  # via -r requirements.in
-wagtail-grapple==0.10.1   # via -r requirements.in
-wagtail-headless-preview==0.1.4  # via wagtail-grapple
-wagtail-react-streamfield==1.3.6  # via -r requirements.in
-wagtail==2.11.3           # via -r requirements.in, wagtail-autocomplete, wagtail-grapple, wagtail-headless-preview, wagtail-orderable, wagtail-react-streamfield, wagtailfontawesome
-wagtailfontawesome==1.2.1  # via -r requirements.in
-webencodings==0.5.1       # via html5lib
-willow==1.4               # via wagtail
-xlrd==2.0.1               # via tablib
-xlsxwriter==1.3.7         # via wagtail
-xlwt==1.3.0               # via tablib
+-e git+https://github.com/juyrjola/django-modelcluster.git#egg=django-modelcluster
+    # via
+    #   -r requirements.in
+    #   wagtail
+-e git+https://github.com/juyrjola/django-orghierarchy.git#egg=django-orghierarchy
+    # via -r requirements.in
+-e git+https://github.com/kausaltech/wagtail-orderable.git#egg=wagtail-orderable
+    # via -r requirements.in
+aniso8601==7.0.0
+    # via
+    #   -r requirements.in
+    #   graphene
+anyascii==0.1.7
+    # via wagtail
+asgiref==3.3.1
+    # via django
+attrs==20.3.0
+    # via pytest
+authlib==0.15.3
+    # via drf-oidc-auth
+beautifulsoup4==4.8.2
+    # via wagtail
+certifi==2020.12.5
+    # via
+    #   requests
+    #   sentry-sdk
+cffi==1.14.4
+    # via
+    #   cryptography
+    #   milksnake
+chardet==4.0.0
+    # via requests
+coreapi==2.3.3
+    # via -r requirements.in
+coreschema==0.0.4
+    # via coreapi
+coverage==5.3.1
+    # via pytest-cov
+cryptography==3.3.1
+    # via
+    #   -r requirements.in
+    #   authlib
+    #   drf-oidc-auth
+    #   social-auth-core
+defusedxml==0.6.0
+    # via
+    #   odfpy
+    #   python3-openid
+    #   social-auth-core
+diff-match-patch==20200713
+    # via django-import-export
+django-admin-autocomplete-filter==0.6.1
+    # via -r requirements.in
+django-admin-numeric-filter==0.1.6
+    # via -r requirements.in
+django-admin-ordering==0.13.1
+    # via -r requirements.in
+django-anymail[mailgun,sendgrid]==8.1
+    # via -r requirements.in
+django-appconf==1.0.4
+    # via django-image-cropping
+django-autocomplete-light==3.8.1
+    # via -r requirements.in
+django-ckeditor==6.0.0
+    # via -r requirements.in
+django-cors-headers==3.6.0
+    # via -r requirements.in
+django-environ==0.4.5
+    # via -r requirements.in
+django-extensions==3.1.0
+    # via -r requirements.in
+django-filter==2.4.0
+    # via
+    #   -r requirements.in
+    #   wagtail
+django-helusers==0.5.6
+    # via -r requirements.in
+django-image-cropping==1.5.0
+    # via -r requirements.in
+django-import-export==2.5.0
+    # via -r requirements.in
+django-js-asset==1.2.2
+    # via
+    #   django-admin-ordering
+    #   django-ckeditor
+    #   django-mptt
+django-modeltrans==0.5.2
+    # via -r requirements.in
+django-mptt==0.11.0
+    # via django-orghierarchy
+django-npm==1.0.0
+    # via -r requirements.in
+django-parler==2.2
+    # via -r requirements.in
+django-redis==4.12.1
+    # via -r requirements.in
+django-reversion==3.0.8
+    # via -r requirements.in
+django-taggit==1.3.0
+    # via wagtail
+django-treebeard==4.4
+    # via wagtail
+django==3.1.5
+    # via
+    #   -r requirements.in
+    #   django-admin-autocomplete-filter
+    #   django-admin-numeric-filter
+    #   django-anymail
+    #   django-appconf
+    #   django-cors-headers
+    #   django-filter
+    #   django-helusers
+    #   django-import-export
+    #   django-modeltrans
+    #   django-mptt
+    #   django-redis
+    #   django-reversion
+    #   django-taggit
+    #   django-treebeard
+    #   djangorestframework
+    #   drf-oidc-auth
+    #   easy-thumbnails
+    #   graphene-django
+    #   wagtail
+    #   wagtail-grapple
+    #   wagtailfontawesome
+djangorestframework==3.12.2
+    # via
+    #   -r requirements.in
+    #   django-orghierarchy
+    #   drf-oidc-auth
+    #   wagtail
+draftjs-exporter==2.1.7
+    # via wagtail
+drf-oidc-auth==1.0.0
+    # via django-helusers
+easy-thumbnails==2.7.1
+    # via -r requirements.in
+ecdsa==0.14.1
+    # via python-jose
+et-xmlfile==1.0.1
+    # via openpyxl
+graphene-django-optimizer==0.8.0
+    # via -r requirements.in
+graphene-django==2.13.0
+    # via
+    #   -r requirements.in
+    #   wagtail-grapple
+graphene==2.1.8
+    # via graphene-django
+graphql-core==2.3.2
+    # via
+    #   graphene
+    #   graphene-django
+    #   graphql-relay
+    #   wagtail-grapple
+graphql-relay==2.0.1
+    # via graphene
+html5lib==1.1
+    # via wagtail
+idna==2.10
+    # via requests
+iniconfig==1.1.1
+    # via pytest
+itypes==1.2.0
+    # via coreapi
+jdcal==1.4.1
+    # via openpyxl
+jinja2==2.11.2
+    # via
+    #   -r requirements.in
+    #   coreschema
+l18n==2020.6.1
+    # via wagtail
+libvoikko==4.3
+    # via -r requirements.in
+lxml==4.6.2
+    # via -r requirements.in
+markdown==3.3.3
+    # via -r requirements.in
+markuppy==1.14
+    # via tablib
+markupsafe==1.1.1
+    # via jinja2
+milksnake==0.1.5
+    # via rustface
+oauthlib==3.1.0
+    # via
+    #   requests-oauthlib
+    #   social-auth-core
+odfpy==1.4.1
+    # via tablib
+openpyxl==3.0.6
+    # via tablib
+packaging==20.8
+    # via pytest
+pillow==8.1.0
+    # via
+    #   -r requirements.in
+    #   easy-thumbnails
+    #   wagtail
+plotly==4.14.3
+    # via -r requirements.in
+pluggy==0.13.1
+    # via pytest
+promise==2.3
+    # via
+    #   graphene-django
+    #   graphql-core
+    #   graphql-relay
+psycopg2-binary==2.8.6
+    # via -r requirements.in
+py==1.10.0
+    # via pytest
+pyasn1==0.4.8
+    # via
+    #   python-jose
+    #   rsa
+pycparser==2.20
+    # via cffi
+pyjwt==2.0.1
+    # via social-auth-core
+pyparsing==2.4.7
+    # via packaging
+pytest-cov==2.10.1
+    # via -r requirements.in
+pytest-django==4.1.0
+    # via -r requirements.in
+pytest==6.2.1
+    # via
+    #   pytest-cov
+    #   pytest-django
+python-jose==3.2.0
+    # via
+    #   -r requirements.in
+    #   django-helusers
+python3-openid==3.2.0
+    # via social-auth-core
+pytz==2020.5
+    # via
+    #   django
+    #   django-modelcluster
+    #   l18n
+pyyaml==5.3.1
+    # via
+    #   -r requirements.in
+    #   tablib
+redis==3.5.3
+    # via django-redis
+requests-oauthlib==1.3.0
+    # via social-auth-core
+requests==2.25.1
+    # via
+    #   coreapi
+    #   django-anymail
+    #   django-helusers
+    #   django-orghierarchy
+    #   drf-oidc-auth
+    #   requests-oauthlib
+    #   social-auth-core
+    #   wagtail
+    #   wagtail-generic-chooser
+retrying==1.3.3
+    # via plotly
+rsa==4.7
+    # via python-jose
+rustface==0.1.0
+    # via -r requirements.in
+rx==1.6.1
+    # via graphql-core
+sentry-sdk==0.19.5
+    # via -r requirements.in
+singledispatch==3.4.0.3
+    # via graphene-django
+six==1.15.0
+    # via
+    #   cryptography
+    #   django-autocomplete-light
+    #   ecdsa
+    #   graphene
+    #   graphene-django
+    #   graphql-core
+    #   graphql-relay
+    #   html5lib
+    #   l18n
+    #   plotly
+    #   promise
+    #   python-jose
+    #   retrying
+    #   singledispatch
+    #   social-auth-app-django
+social-auth-app-django==4.0.0
+    # via -r requirements.in
+social-auth-core==4.0.3
+    # via social-auth-app-django
+soupsieve==2.1
+    # via beautifulsoup4
+sqlparse==0.4.1
+    # via django
+swapper==1.1.2.post1
+    # via django-orghierarchy
+tablib[html,ods,xls,xlsx,yaml]==3.0.0
+    # via
+    #   django-import-export
+    #   wagtail
+toml==0.10.2
+    # via pytest
+unidecode==1.1.2
+    # via
+    #   graphene-django
+    #   wagtail
+uritemplate==3.0.1
+    # via
+    #   -r requirements.in
+    #   coreapi
+urllib3==1.26.2
+    # via
+    #   requests
+    #   sentry-sdk
+wagtail-autocomplete==0.6
+    # via -r requirements.in
+wagtail-condensedinlinepanel==0.5.3
+    # via -r requirements.in
+wagtail-generic-chooser==0.1.1
+    # via -r requirements.in
+wagtail-grapple==0.10.1
+    # via -r requirements.in
+wagtail-headless-preview==0.1.4
+    # via wagtail-grapple
+wagtail-react-streamfield==1.3.6
+    # via -r requirements.in
+wagtail==2.11.3
+    # via
+    #   -r requirements.in
+    #   wagtail-autocomplete
+    #   wagtail-grapple
+    #   wagtail-headless-preview
+    #   wagtail-orderable
+    #   wagtail-react-streamfield
+    #   wagtailfontawesome
+wagtailfontawesome==1.2.1
+    # via -r requirements.in
+webencodings==0.5.1
+    # via html5lib
+willow==1.4
+    # via wagtail
+xlrd==2.0.1
+    # via tablib
+xlsxwriter==1.3.7
+    # via wagtail
+xlwt==1.3.0
+    # via tablib
