Implement support for filtering by responsible party in Wagtail admin

--- a/requirements.in
+++ b/requirements.in
@@ -26,7 +26,7 @@ aniso8601
 wagtail-condensedinlinepanel
 django-admin-numeric-filter
 django-admin-ordering
-django-admin-autocomplete-filter
+dal_admin_filters
 django-import-export
 Jinja2
 django-parler
