--- a/requirements.in
+++ b/requirements.in
@@ -35,6 +35,8 @@ django-anymail[sendgrid]
 django-reversion
 pytest-django
 pytest-cov
+factory-boy==3.1.0  # pinned to old version due to https://github.com/wagtail/wagtail-factories/issues/38
+wagtail-factories
 pytest-factoryboy
 libvoikko
 django-modeltrans
