Make Azure AD settings configurable in environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - OIDC_ISSUER_URL
       - OIDC_CLIENT_ID
       - OIDC_CLIENT_SECRET
+      - AZURE_AD_CLIENT_ID
+      - AZURE_AD_CLIENT_SECRET
       - MAILGUN_API_KEY
       - MAILGUN_SENDER_DOMAIN
       - MAILGUN_REGION
